k8s/postgres-cluster-ip-service.yml
apiVersion: v1

kind: Service

metadata:
  name: postgres-cluster-ip-service

spec:
  type: ClusterIP
  selector:
      component: postgres
  ports:
    - port: 5432
      targetPort: 5432
